# text-editor

./: .gitignore  CMakeLists.txt  README.md  readme.txt
src/: _old.cpp  cursor.h  file.txt  filehandling.h  main.cpp  mouse.h  settings.cpp  settings.h  window.h
